input/keda/manifests/sourced/Service_keda-operator.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/name: keda-operator
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.17.0
  name: keda-operator
  namespace: keda
spec:
  ports:
    - name: metricsservice
      port: 9666
      targetPort: 9666
  selector:
    app: keda-operator
